--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,7 @@
     <title>Resume - Raafiqul Hasan</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons-font@v9/font/simple-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="light-mode">
@@ -45,10 +46,11 @@
             
             <nav id="main-nav">
                 <ul>
-                    <li><a href="resume.html" class="active">Resume</a></li>
-                    <li><a href="research.html">Research</a></li>
-                    <li><a href="outreach.html">Outreach</a></li>
-                    <li><a href="personal.html">Personal</a></li>
+                    <li><a href="resume.html" class="active">→ Resume</a></li>
+                    <li><a href="research.html">→ Research</a></li>
+                    <li><a href="projects.html">→ Projects</a></li>
+                    <li><a href="outreach.html">→ Outreach</a></li>
+                    <li><a href="personal.html">→ Personal</a></li>
                 </ul>
             </nav>
         </header>
@@ -64,10 +66,10 @@
             </aside>
 
             <section class="content">
-                <h2>Resume</h2>
+                <h2><i class="fas fa-file-alt section-icon"></i> Resume</h2>
                 
                 <div class="resume-section">
-                    <h3>Education</h3>
+                    <h3><i class="fas fa-graduation-cap"></i> Education</h3>
                     <div class="resume-item glass-card">
                         <h4>B.Sc. in Electrical and Electronics Engineering (EEE)</h4>
                         <p class="institution">University of Asia Pacific, Dhaka, Bangladesh</p>
@@ -77,9 +79,9 @@
                 </div>
 
                 <div class="resume-section">
-                    <h3>Experience</h3>
+                    <h3><i class="fas fa-flask"></i> Experience</h3>
                     <div class="resume-item glass-card">
-                        <h4>Laboratory Work (EEE & Physics Labs)</h4>
+                        <h4><i class="fas fa-microscope"></i> Laboratory Work (EEE & Physics Labs)</h4>
                         <ul>
                             <li>Verification of Ohm's Law and Kirchhoff's Voltage Law (KVL)</li>
                             <li>I-V Characteristics of Rectifier and Zener Diodes</li>
@@ -89,7 +91,7 @@
                         </ul>
                     </div>
                     <div class="resume-item glass-card">
-                        <h4>Technical Practice</h4>
+                        <h4><i class="fab fa-linux"></i> Technical Practice</h4>
                         <ul>
                             <li>Linux system customization and configuration</li>
                             <li>System performance optimization</li>
@@ -99,28 +101,16 @@
                 </div>
 
                 <div class="resume-section">
-                    <h3>Skills</h3>
+                    <h3><i class="fas fa-code"></i> Skills</h3>
                     <div class="skills-grid">
-                        <div class="skill-tag">
-                            <i class="si si-c"></i>
-                            <span>C (beginner)</span>
-                        </div>
-                        <div class="skill-tag">
-                            <i class="si si-python"></i>
-                            <span>Python (beginner)</span>
-                        </div>
-                        <div class="skill-tag">
-                            <i class="si si-linux"></i>
-                            <span>Linux</span>
-                        </div>
-                        <div class="skill-tag">
-                            <i class="si si-visualstudiocode"></i>
-                            <span>Circuit Analysis</span>
-                        </div>
-                        <div class="skill-tag">
-                            <i class="si si-math"></i>
-                            <span>Mathematical Modeling</span>
-                        </div>
+                        <div class="skill-tag"><i class="fab fa-c"></i> C (beginner)</div>
+                        <div class="skill-tag"><i class="fab fa-python"></i> Python (beginner)</div>
+                        <div class="skill-tag"><i class="fab fa-linux"></i> Linux</div>
+                        <div class="skill-tag"><i class="fas fa-microchip"></i> Circuit Analysis</div>
+                        <div class="skill-tag"><i class="fas fa-square-root-alt"></i> Mathematical Modeling</div>
+                        <div class="skill-tag"><i class="fas fa-bolt"></i> Semiconductor Devices</div>
+                        <div class="skill-tag"><i class="fas fa-wave-square"></i> Laplace Transform</div>
+                        <div class="skill-tag"><i class="fas fa-pencil-ruler"></i> Problem Solving</div>
                     </div>
                 </div>
             </section>
@@ -129,16 +119,13 @@
         <footer>
             <div class="contact-links">
                 <a href="mailto:raafiqulhasan756@gmail.com" class="contact-link">
-                    <i class="si si-gmail"></i>
-                    <span>Email</span>
+                    <i class="fas fa-envelope"></i> <span>Email</span>
                 </a>
                 <a href="https://github.com/StarX-404" target="_blank" class="contact-link">
-                    <i class="si si-github"></i>
-                    <span>GitHub</span>
+                    <i class="fab fa-github"></i> <span>GitHub</span>
                 </a>
                 <a href="https://www.linkedin.com/in/raafiqul-hasan" target="_blank" class="contact-link">
-                    <i class="si si-linkedin"></i>
-                    <span>LinkedIn</span>
+                    <i class="fab fa-linkedin"></i> <span>LinkedIn</span>
                 </a>
             </div>
             <p>University of Asia Pacific, Dhaka</p>
