Refactor comments and remove featured projects
Updated comments for clarity and removed featured projects section.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
         <!-- Main Content -->
         <div class="main-content">
-            <!-- Sidebar -->
+            <!-- Sidebar with Photo and Bio - NO EXTRA SPACE -->
             <aside class="sidebar glass-card">
                 <div class="profile-image">
                     <img src="images/your-photo.jpg" alt="Raafiqul Hasan">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
 
-                <!-- Quick Overview Cards -->
+                <!-- Quick Overview Cards - ONLY SECTION -->
                 <h3>Quick Overview</h3>
                 <div class="cards-grid">
                     <div class="info-card glass-card">
@@ -133,29 +133,7 @@
                         <p>C, Python, Mathematical Modeling, Linux Configuration</p>
                     </div>
                 </div>
-
-                <!-- Projects Preview -->
-                <h3><i class="fas fa-project-diagram section-icon"></i> Featured Projects</h3>
-                <div class="projects-preview">
-                    <div class="project-preview-card glass-card">
-                        <i class="fas fa-diode"></i>
-                        <h4>Diode Characteristics</h4>
-                        <p>Analysis of rectifying and Zener diodes</p>
-                        <a href="projects.html" class="preview-link">View Details →</a>
-                    </div>
-                    <div class="project-preview-card glass-card">
-                        <i class="fas fa-square-root-alt"></i>
-                        <h4>Laplace Transform</h4>
-                        <p>Mathematical modeling in circuit analysis</p>
-                        <a href="projects.html" class="preview-link">View Details →</a>
-                    </div>
-                    <div class="project-preview-card glass-card">
-                        <i class="fab fa-linux"></i>
-                        <h4>Linux Optimization</h4>
-                        <p>System configuration and tuning</p>
-                        <a href="projects.html" class="preview-link">View Details →</a>
-                    </div>
-                </div>
+                <!-- FEATURED PROJECTS SECTION REMOVED -->
             </section>
         </div>
 
