--- a/outreach.html
+++ b/outreach.html
@@ -44,15 +44,16 @@
                 </div>
             </div>
             
+           
             <nav id="main-nav">
-                <ul>
-                    <li><a href="resume.html">→ Resume</a></li>
-                    <li><a href="research.html">→ Research</a></li>
-                    <li><a href="projects.html">→ Projects</a></li>
-                    <li><a href="outreach.html" class="active">→ Outreach</a></li>
-                    <li><a href="personal.html">→ Personal</a></li>
-                </ul>
-            </nav>
+    <ul>
+        <li><a href="resume.html">→ Resume</a></li>
+        <li><a href="research.html">→ Research</a></li>
+        <li><a href="projects.html">→ Projects</a></li>
+        <li><a href="outreach.html">→ Outreach</a></li>
+        <li><a href="personal.html">→ Personal</a></li>
+    </ul>
+</nav>
         </header>
 
         <div class="main-content">
