Update projects section with incoming message box
Replaced the 'Coming Soon' section with an 'Incoming' message box that highlights upcoming projects and their details.

--- a/project.html
+++ b/project.html
@@ -44,6 +44,7 @@
                 </div>
             </div>
             
+            <!-- SINGLE ARROW NAVIGATION -->
             <nav id="main-nav">
                 <ul>
                     <li><a href="resume.html">→ Resume</a></li>
@@ -68,56 +69,28 @@
             <section class="content">
                 <h2><i class="fas fa-project-diagram section-icon"></i> Projects</h2>
                 
-                <!-- Coming Soon Banner -->
-                <div class="coming-soon glass-card">
-                    <div class="coming-soon-icon">
-                        <i class="fas fa-tools"></i>
-                    </div>
-                    <h3>Projects Page - Coming Soon!</h3>
-                    <p>I'm currently working on documenting my projects in detail. Check back soon for:</p>
-                    <div class="coming-soon-list">
-                        <div class="coming-soon-item">
-                            <i class="fas fa-diode"></i>
-                            <span>Diode Characteristics Analysis</span>
-                        </div>
-                        <div class="coming-soon-item">
-                            <i class="fas fa-square-root-alt"></i>
-                            <span>Laplace Transform Applications</span>
-                        </div>
-                        <div class="coming-soon-item">
-                            <i class="fab fa-linux"></i>
-                            <span>Linux System Optimization</span>
-                        </div>
-                        <div class="coming-soon-item">
+                <!-- INCOMING!!! MESSAGE - BIG AND BOLD -->
+                <div class="incoming-container">
+                    <div class="incoming-box glass-card">
+                        <div class="incoming-icon">
+                            <i class="fas fa-tools"></i>
+                            <i class="fas fa-code"></i>
                             <i class="fas fa-microchip"></i>
-                            <span>Semiconductor Device Physics</span>
                         </div>
-                    </div>
-                    <div class="coming-soon-footer">
-                        <i class="fas fa-clock"></i> Will update with detailed project documentation soon
-                    </div>
-                </div>
-
-                <!-- Preview of what's coming -->
-                <h3>Project Categories</h3>
-                <div class="projects-grid">
-                    <div class="project-category-card glass-card">
-                        <i class="fas fa-bolt"></i>
-                        <h4>Electronics</h4>
-                        <p>Diode circuits, semiconductor devices, and analog electronics</p>
-                        <span class="category-badge">Coming Soon</span>
-                    </div>
-                    <div class="project-category-card glass-card">
-                        <i class="fas fa-square-root-alt"></i>
-                        <h4>Mathematics</h4>
-                        <p>Laplace transforms, differential equations, mathematical modeling</p>
-                        <span class="category-badge">Coming Soon</span>
-                    </div>
-                    <div class="project-category-card glass-card">
-                        <i class="fab fa-linux"></i>
-                        <h4>Systems</h4>
-                        <p>Linux configuration, kernel optimization, system programming</p>
-                        <span class="category-badge">Coming Soon</span>
+                        <h1 class="incoming-title">INCOMING !!!</h1>
+                        <div class="incoming-message">
+                            <p>Project details are being prepared.</p>
+                            <p>Please check back soon!</p>
+                        </div>
+                        <div class="incoming-projects-list">
+                            <span><i class="fas fa-diode"></i> Diode Characteristics</span>
+                            <span><i class="fas fa-square-root-alt"></i> Laplace Transform</span>
+                            <span><i class="fab fa-linux"></i> Linux Optimization</span>
+                            <span><i class="fas fa-microchip"></i> Semiconductor Physics</span>
+                        </div>
+                        <div class="incoming-footer">
+                            <i class="fas fa-clock"></i> Coming Soon
+                        </div>
                     </div>
                 </div>
             </section>
