Remove arrows from navigation links

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             
             <nav id="main-nav">
                 <ul>
-                    <li><a href="/resume">→ Resume</a></li>
-                    <li><a href="/research">→ Research</a></li>
-                    <li><a href="/projects">→ Projects</a></li>
-                    <li><a href="/outreach">→ Outreach</a></li>
-                    <li><a href="/personal">→ Personal</a></li>
+                    <li><a href="/resume">Resume</a></li>
+                    <li><a href="/research">Research</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/outreach">Outreach</a></li>
+                    <li><a href="/personal">Personal</a></li>
                 </ul>
             </nav>
         </header>
