--- a/outreach.html
+++ b/outreach.html
@@ -42,11 +42,11 @@
             </div>
             <nav id="main-nav">
                 <ul>
-                    <li><a href="/resume">→ Resume</a></li>
-                    <li><a href="/research">→ Research</a></li>
-                    <li><a href="/projects">→ Projects</a></li>
-                    <li><a href="/outreach" class="active">→ Outreach</a></li>
-                    <li><a href="/personal">→ Personal</a></li>
+                    <li><a href="/resume">Resume</a></li>
+                    <li><a href="/research">Research</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/outreach" class="active">Outreach</a></li>
+                    <li><a href="/personal">Personal</a></li>
                 </ul>
             </nav>
         </header>
