--- a/resume.html
+++ b/resume.html
@@ -42,11 +42,11 @@
             </div>
             <nav id="main-nav">
                 <ul>
-                    <li><a href="/resume" class="active">→ Resume</a></li>
-                    <li><a href="/research">→ Research</a></li>
-                    <li><a href="/projects">→ Projects</a></li>
-                    <li><a href="/outreach">→ Outreach</a></li>
-                    <li><a href="/personal">→ Personal</a></li>
+                    <li><a href="/resume" class="active">Resume</a></li>
+                    <li><a href="/research">Research</a></li>
+                    <li><a href="/projects">Projects</a></li>
+                    <li><a href="/outreach">Outreach</a></li>
+                    <li><a href="/personal">Personal</a></li>
                 </ul>
             </nav>
         </header>
