--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Raafiqul Hasan</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    
+    <!-- DARK MODE FIX -->
+    <script>
+        (function() {
+            try {
+                const savedTheme = localStorage.getItem('theme');
+                if (savedTheme === 'dark') {
+                    document.body.classList.add('dark-mode');
+                    document.body.classList.remove('light-mode');
+                } else {
+                    document.body.classList.add('light-mode');
+                    document.body.classList.remove('dark-mode');
+                }
+            } catch (e) {
+                document.body.classList.add('light-mode');
+            }
+        })();
+    </script>
 </head>
 <body class="light-mode">
     <div class="theme-wrapper">
@@ -17,26 +35,12 @@
                     <p class="subtitle">Electrical and Electronics Engineering Student</p>
                 </div>
                 <div class="header-controls">
-                    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
-                        <svg class="sun-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <circle cx="12" cy="12" r="5"></circle>
-                            <line x1="12" y1="1" x2="12" y2="3"></line>
-                            <line x1="12" y1="21" x2="12" y2="23"></line>
-                            <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-                            <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-                            <line x1="1" y1="12" x2="3" y2="12"></line>
-                            <line x1="21" y1="12" x2="23" y2="12"></line>
-                            <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-                            <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-                        </svg>
-                        <svg class="moon-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="display: none;">
-                            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-                        </svg>
+                    <button id="theme-toggle" class="theme-toggle">
+                        <i class="fas fa-sun sun-icon"></i>
+                        <i class="fas fa-moon moon-icon" style="display: none;"></i>
                     </button>
-                    <button id="menu-toggle" class="menu-toggle" aria-label="Toggle menu">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                    <button id="menu-toggle" class="menu-toggle">
+                        <span></span><span></span><span></span>
                     </button>
                 </div>
             </div>
@@ -57,29 +61,21 @@
                     <img src="/images/your-photo.jpg" alt="Raafiqul Hasan">
                 </div>
                 <h2>A Bit About Me</h2>
-                <p class="bio">I'm an Electrical and Electronics Engineering (EEE) student at the University of Asia Pacific, Dhaka. I focus on building strong fundamentals in circuit analysis, mathematics, physics, and programming (C & Python).</p>
-                <p class="bio">I enjoy understanding systems from the ground up — whether it's semiconductor devices, differential equations, or Linux system customization. My goal is to grow into a strong engineer and future academic in EEE.</p>
+                <p class="bio">I'm an Electrical and Electronics Engineering (EEE) student at the University of Asia Pacific, Dhaka.</p>
             </aside>
 
-            <section class="content">
-                <h2><i class="fas fa-project-diagram"></i> Projects</h2>
-                
-                <div class="incoming-box glass-card">
-                    <div class="incoming-icon">
+            <section class="content incoming-page">
+                <div class="incoming-message-box">
+                    <h1 class="incoming-large">
+                        <span class="incoming-word">INCOMING</span>
+                        <span class="incoming-exclamation">!!!</span>
+                    </h1>
+                    <div class="incoming-decoration">
                         <i class="fas fa-code"></i>
                         <i class="fas fa-microchip"></i>
                         <i class="fab fa-linux"></i>
                     </div>
-                    <h1 class="incoming-title">INCOMING !!!</h1>
-                    <p class="incoming-text">Project details are being prepared and will be available soon.</p>
-                    <div class="incoming-tags">
-                        <span><i class="fas fa-diode"></i> Diode Analysis</span>
-                        <span><i class="fas fa-square-root-alt"></i> Laplace Transform</span>
-                        <span><i class="fab fa-linux"></i> Linux Optimization</span>
-                    </div>
-                    <div class="incoming-footer">
-                        <i class="fas fa-clock"></i> Coming Soon
-                    </div>
+                    <p class="incoming-small">Project details coming soon</p>
                 </div>
             </section>
         </div>
